; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkmylofw.c_write_out_padding.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkmylofw.c_write_out_padding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_out_padding(i32* %0, i64 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca [512 x i32], align 16
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i64 2048, i64* %11, align 8
  %12 = getelementptr inbounds [512 x i32], [512 x i32]* %10, i64 0, i64 0
  %13 = load i32, i32* %8, align 4
  %14 = load i64, i64* %11, align 8
  %15 = call i32 @memset(i32* %12, i32 %13, i64 %14)
  br label %16

16:                                               ; preds = %33, %4
  %17 = load i64, i64* %7, align 8
  %18 = icmp ugt i64 %17, 0
  br i1 %18, label %19, label %37

19:                                               ; preds = %16
  %20 = load i64, i64* %7, align 8
  %21 = load i64, i64* %11, align 8
  %22 = icmp ult i64 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i64, i64* %7, align 8
  store i64 %24, i64* %11, align 8
  br label %25

25:                                               ; preds = %23, %19
  %26 = load i32*, i32** %6, align 8
  %27 = getelementptr inbounds [512 x i32], [512 x i32]* %10, i64 0, i64 0
  %28 = load i64, i64* %11, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = call i64 @write_out_data(i32* %26, i32* %27, i64 %28, i32* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %25
  store i32 -1, i32* %5, align 4
  br label %38

33:                                               ; preds = %25
  %34 = load i64, i64* %11, align 8
  %35 = load i64, i64* %7, align 8
  %36 = sub i64 %35, %34
  store i64 %36, i64* %7, align 8
  br label %16

37:                                               ; preds = %16
  store i32 0, i32* %5, align 4
  br label %38

38:                                               ; preds = %37, %32
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i32 @memset(i32*, i32, i64) #1

declare dso_local i64 @write_out_data(i32*, i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
